--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@
             </section>
             <section class="aboutSection" id="aboutSection">
                 <span>
-                    <h1>SOBRE OUR APP</h1>
+                    <h1>ABOUT OUR APP</h1>
                     <br><br>
                     <p class="gray-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc
                         ante
@@ -244,249 +244,27 @@
                             </div>
                         </div>
                         <div class="ratingTextBox">
-                            <div>
+                            <div class="ratingTextBoxContant">
                                 <img src="./assets/icons/download-fill.svg" alt="download-fill">
                                 <span>59865</span>
                                 <span>DOWNLOAD</span>
                             </div>
-                            <div>
+                            <div class="ratingTextBoxContant">
                                 <img src="./assets/icons/thumb-up.svg" alt="download-fill">
                                 <span>29852</span>
                                 <span>LIKE</span>
                             </div>
-                            <div>
+                            <div class="ratingTextBoxContant">
                                 <img src="./assets/icons/star-fill.svg" alt="download-fill">
                                 <span>1500</span>
                                 <span>5 STAR RATING</span>
                             </div>
                         </div>
                     </div>
-                    <img src="./assets/background/iphone-12-mockup.svg" alt="iphone-12-mockup">
+                    <div class="appInterfaceSectionDownloadAppWrapperRightImgBox">
+                        <img src="./assets/background/iphone-12-mockup.svg" alt="iphone-12-mockup">
+                    </div>
                 </div>
-            </section>
-            <section class="howToUseSection">
-                <main>
-                    <h1>HOW TO USE THE APP PERFECTLY</h1>
-                    <br>
-                    <p class="white-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc
-                        ante velit vitae. Est tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus,
-                        ullamcorper velit. Ullamcorper risus tempor, ac nunc libero urna, feugiat.</p>
-                </main>
-                <img src="./assets/background/notbook-bg-img.svg" alt="notbook-bg">
-            </section>
-            <section class="ourTeamSection">
-                <span>
-                    <h1>OUR REATIVE TEAM</h1>
-                    <br><br>
-                    <p class="gray-paragraphs">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc
-                        ante velit vitae. Est tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus,
-                        ullamcorper velit. Ullamcorper risus tempor, ac nunc libero urna, feugiat.</p>
-                </span>
-                <br><br>
-                <main class="teamProfileContainer">
-                    <div class="teamProfileContant">
-                        <img src="./assets/profile-img/carla-img.svg" alt="carla-img">
-                        <br><br><br>
-                        <h1>CARLA PRESS</h1>
-                        <span class="gray-paragraphs">APP DEVELOPER</span>
-                        <br>
-                        <p class="gray-paragraphs">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc
-                            ante velit vitae. Est
-                            tellus vitae.</p>
-                        <br><br>
-                        <div class="teamProfileContantSocialMidias">
-                            <a href="#"> <img src="./assets/icons/purple-facebook-fill.svg" alt="purple-facebook-fill">
-                            </a>
-                            <hr>
-                            <a href="#">
-                                <img src="./assets/icons/black-instagram-fill.svg" alt="instagram-fill">
-                            </a>
-                            <hr>
-                            <a href="#">
-                                <img src="./assets/icons/black-twitter-fill.svg" alt="twitter-fill">
-                            </a>
-                            <hr>
-                            <a href="#">
-                                <img src="./assets/icons/black-youtube-fill.svg" alt="youtube-fill">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="teamProfileContant">
-                        <img src="./assets/profile-img/craig-img.svg" alt="craig-img">
-                        <br><br><br>
-                        <h1>CRAIG GOUSE</h1>
-                        <span class="gray-paragraphs">UI/UX DESIGNER</span>
-                        <br>
-                        <p class="gray-paragraphs">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc
-                            ante velit vitae. Est
-                            tellus vitae.</p>
-                        <br><br>
-                        <div class="teamProfileContantSocialMidias">
-                            <a href="#"> <img src="./assets/icons/black-facebook-fill.svg" alt="purple-facebook-fill">
-                            </a>
-                            <hr>
-                            <a href="#">
-                                <img src="./assets/icons/black-instagram-fill.svg" alt="instagram-fill">
-                            </a>
-                            <hr>
-                            <a href="#">
-                                <img src="./assets/icons/black-twitter-fill.svg" alt="twitter-fill">
-                            </a>
-                            <hr>
-                            <a href="#">
-                                <img src="./assets/icons/black-youtube-fill.svg" alt="youtube-fill">
-                            </a>
-                        </div>
-                    </div>
-                    <div class="teamProfileContant">
-                        <img src="./assets/profile-img/jocelyn-img.svg" alt="">
-                        <br><br><br>
-                        <h1>JOCELYN SEPTIMUS</h1>
-                        <span class="gray-paragraphs">APP DEVELOPER</span>
-                        <br>
-                        <p class="gray-paragraphs">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc
-                            ante velit vitae. Est
-                            tellus vitae.</p>
-                        <br><br>
-                        <div class="teamProfileContantSocialMidias">
-                            <a href="#"> <img src="./assets/icons/black-facebook-fill.svg" alt="purple-facebook-fill">
-                            </a>
-                            <hr>
-                            <a href="#">
-                                <img src="./assets/icons/black-instagram-fill.svg" alt="instagram-fill">
-                            </a>
-                            <hr>
-                            <a href="#">
-                                <img src="./assets/icons/black-twitter-fill.svg" alt="twitter-fill">
-                            </a>
-                            <hr>
-                            <a href="#">
-                                <img src="./assets/icons/black-youtube-fill.svg" alt="youtube-fill">
-                            </a>
-                        </div>
-                    </div>
-                </main>
-            </section>
-            <section class="ourHappyCostumersSection">
-                <span>
-                    <h1>OUR HAPPY COSTUMERS</h1>
-                    <br><br>
-                    <p class="white-paragraphs">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. At sunt ab facere, dolore vero tempora
-                        natus inventore autem quos dolor recusandae nulla eius nemo, ratione fuga veniam corrupti omnis
-                        impedit.
-                    </p>
-                </span>
-                <br><br><br>
-                <div class="swiper">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <img src="./assets/profile-img/ann-img.svg" alt="ann-img">
-                            <br><br>
-                            <h1>ANN LUBIN</h1>
-                            <br><br>
-                            <span>CO-FOUNDER</span>
-                            <br><br>
-                            <p class="gray-paragraphs">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae.
-                                Est tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus,
-                                ullamcorper velit. Ullamcorper risus tempor, ac nunc libero urna, feugiat.
-                            </p>
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="./assets/profile-img/ann-img.svg" alt="ann-img">
-                            <br><br>
-                            <h1>ANN LUBIN</h1>
-                            <br><br>
-                            <span>CO-FOUNDER</span>
-                            <br><br>
-                            <p class="gray-paragraphs">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae.
-                                Est tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus,
-                                ullamcorper velit. Ullamcorper risus tempor, ac nunc libero urna, feugiat.
-                            </p>
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="./assets/profile-img/ann-img.svg" alt="ann-img">
-                            <br><br>
-                            <h1>ANN LUBIN</h1>
-                            <br><br>
-                            <span>CO-FOUNDER</span>
-                            <br><br>
-                            <p class="gray-paragraphs">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae.
-                                Est tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus,
-                                ullamcorper velit. Ullamcorper risus tempor, ac nunc libero urna, feugiat.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="swiper-pagination"></div>
-                </div>
-            </section>
-            <section class="ourRecentBlogSection">
-                <span>
-                    <h1>OUR RECENT BLOG</h1>
-                    <br><br>
-                    <p class="gray-paragraphs">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante
-                        velit vitae. Est tellus vitae, nullam lobortis enim. Faucibus amet etiam tincidunt rhoncus,
-                        ullamcorper velit. Ullamcorper risus tempor, ac nunc libero urna, feugiat.
-                    </p>
-                </span>
-                <br><br>
-                <main class="blogLinkContainer">
-                    <a href="" class="blogLinkContant">
-                        <img src="./assets/blog-imgs/snap-pix.png" alt="snap-pix">
-                        <div>
-                            <br><br>
-                            <h1>
-                                THE SNAP PIXEL: HOW IT WORKS AND HOW TO INSTALL
-                            </h1>
-                            <br><br>
-                            <p class="gray-paragraphs">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae.
-                                Est
-                                tellus vitae, nullam lobortis enim.
-                            </p>
-                            <br><br>
-                        </div>
-                    </a>
-                    <a href="" class="blogLinkContant">
-                        <img src="./assets/blog-imgs/global-partner.png" alt="global-partner">
-                        <div>
-                            <br><br>
-                            <h1>
-                                GLOBAL PARTNER SOLUTIONS: A PARTNERSHIP INOVATION
-                            </h1>
-                            <br><br>
-                            <p class="gray-paragraphs">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae.
-                                Est
-                                tellus vitae, nullam lobortis enim.
-                            </p>
-                            <br><br>
-                        </div>
-                    </a>
-                    <a href="" class="blogLinkContant">
-                        <img src="./assets/blog-imgs/snapchaters-opportunity.png" alt="snapchaters-opportunity">
-                        <div>
-                            <br><br>
-                            <h1>
-                                2021: AN OPPORTUNITY FOR SNAPCHATTERS TO START FRESH
-                            </h1>
-                            <br><br>
-                            <p class="gray-paragraphs">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Viverra nunc ante velit vitae.
-                                Est
-                                tellus vitae, nullam lobortis enim.
-                            </p>
-                            <br><br>
-                        </div>
-                    </a>
-                </main>
             </section>
         </main>
 
